# Celery_POC

./: README.md  celery_app.py  main.py  pyproject.toml  tasks.py
